tests/reference/run-arithmetic_if1_cc-87bcd45.stderr
semantic error: Arithmetic if (x) requires an integer or real for `x`
 --> tests/errors/arithmetic_if1_cc.f90:5:9
  |
5 |     if ("yy") 1, 2, 3
  |         ^^^^ 
